--- a/package.json
+++ b/package.json
@@ -9,15 +9,14 @@
   "author": "Murali Anand (github.com/muralianand12345)",
   "license": "ISC",
   "dependencies": {
-    "@discordjs/rest": "^1.1.0",
-    "discord-api-types": "^0.37.8",
-    "discord.js": "^14.3.0",
+    "colors": "^1.4.0",
+    "discord.js": "^14.5.0",
     "dotenv": "^16.0.2",
-    "hastebin": "^0.2.1",
+    "express": "^4.18.1",
     "moment": "^2.29.4",
     "moment-duration-format": "^2.3.2",
     "moment-timezone": "^0.5.37",
-    "mongoose": "^6.6.1",
+    "pastebin-ts": "^1.3.0",
     "systeminformation": "^5.12.6"
   },
   "repository": {
@@ -27,5 +26,6 @@
   "bugs": {
     "url": "https://github.com/muralianand12345/Discord-Ticket-Bot/issues"
   },
-  "homepage": "https://github.com/muralianand12345/Discord-Ticket-Bot#readme"
+  "homepage": "https://github.com/muralianand12345/Discord-Ticket-Bot#readme",
+  "nodeVersion": "17.9.1"
 }
