--- a/package.json
+++ b/package.json
@@ -9,15 +9,13 @@
   "author": "Murali Anand (github.com/muralianand12345)",
   "license": "ISC",
   "dependencies": {
-    "colors": "1.4.0",
+    "colors": "^1.4.0",
     "discord.js": "^14.5.0",
     "dotenv": "^16.0.2",
-    "express": "^4.18.1",
     "moment": "^2.29.4",
     "moment-duration-format": "^2.3.2",
     "moment-timezone": "^0.5.37",
-    "pastebin-ts": "^1.3.0",
-    "systeminformation": "^5.12.6"
+    "pastebin-ts": "^1.3.0"
   },
   "repository": {
     "type": "git",
