--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ticket-discordjs14",
-  "version": "2.3.0",
+  "version": "1.0.0",
   "description": "EliteX Ticket Bot DiscordJS@14.0.2 Version",
   "main": "index.js",
   "scripts": {
@@ -9,13 +9,15 @@
   "author": "Murali Anand (github.com/muralianand12345)",
   "license": "ISC",
   "dependencies": {
-    "colors": "1.4.0",
+    "colors": "^1.4.0",
+    "discord-html-transcripts": "^3.1.0",
     "discord.js": "^14.5.0",
     "dotenv": "^16.0.2",
+    "express": "^4.18.1",
     "moment": "^2.29.4",
     "moment-duration-format": "^2.3.2",
     "moment-timezone": "^0.5.37",
-    "pastebin-ts": "^1.3.0"
+    "ms": "^2.1.3"
   },
   "repository": {
     "type": "git",
