--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ticket-discordjs14",
-  "version": "2.5.0",
+  "version": "2.6.0",
   "description": "EliteX Ticket Bot DiscordJS@14.0.2 Version",
   "main": "index.js",
   "scripts": {
@@ -11,6 +11,7 @@
   "dependencies": {
     "colors": "1.4.0",
     "discord-html-transcripts": "^3.1.0",
+    "discord-error-handler": "^1.3.3",
     "discord.js": "^14.6.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
