--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ticket-discordjs14",
-  "version": "2.6.0",
+  "version": "2.7.1",
   "description": "EliteX Ticket Bot DiscordJS@14.0.2 Version",
   "main": "index.js",
   "scripts": {
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "colors": "1.4.0",
+    "discord-chatbot": "^2.1.0",
     "discord-html-transcripts": "^3.1.0",
     "discord-error-handler": "^1.3.3",
     "discord.js": "^14.6.0",
