--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ticket-discordjs14",
-  "version": "3.5.1",
+  "version": "4.0.0",
   "description": "EliteX Ticket Bot DiscordJS@14.0.2 Version",
   "main": "index.js",
   "scripts": {
@@ -13,12 +13,13 @@
     "discord-chatbot": "^2.1.0",
     "discord-html-transcripts": "^3.1.0",
     "discord-error-handler": "^1.3.3",
-    "discord.js": "^14.7.0",
+    "discord.js": "^14.7.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "moment": "^2.29.4",
     "moment-duration-format": "^2.3.2",
     "moment-timezone": "^0.5.37",
+    "mongoose": "^6.8.3",
     "ms": "^2.1.3"
   },
   "repository": {
